--- a/public/add.css
+++ b/public/add.css
@@ -17,7 +17,7 @@ body{
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center; */
-    font-family: sans-serif;
+  font-family: 'Alegreya Sans SC', sans-serif;
 }
 
 h1{
