--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -14,7 +14,7 @@
   <body>
     <div class="addrest">
 
-        <h1>Edit</h1>
+        <h1 class="maintext">Edit</h1>
         <form action="/holeinwall" method="POST" >
             <p>Name</p>
             <input type="text" name="name">
