--- a/public/index.css
+++ b/public/index.css
@@ -132,7 +132,77 @@ nav ul li {
   display: inline-block;
 }
 
+/* //NEW AND EDIT  */
+.addrest{
+    width: 320px;
+    height: 720px;
+    background: #000;
+    color: #fff;
+    top: 50%;
+    left: 50%;
+    position: absolute;
+    transform: translate(-50%,-50%);
+    box-sizing: border-box;
+    padding: 10px 30px;
+}
 
+
+h1{
+    margin: 0;
+    padding: 0 0 20px;
+    text-align: center;
+    font-family: 'Lato', sans-serif;
+    font-size: 22px;
+}
+
+.addrest p{
+    margin: 0;
+    padding: 0;
+    font-weight: bold;
+}
+
+.addrest input{
+    width: 100%;
+    margin-bottom: 20px;
+}
+
+.addrest input[type="text"]
+{
+    border: none;
+    border-bottom: 1px solid #fff;
+    background: transparent;
+    outline: none;
+    height: 40px;
+    color: #fff;
+    font-size: 16px;
+}
+.addrest input[type="submit"]
+{
+    border: none;
+    outline: none;
+    height: 40px;
+    background: var(--blue);
+    color: #fff;
+    font-size: 18px;
+    border-radius: 20px;
+}
+.addrest input[type="submit"]:hover
+{
+    cursor: pointer;
+    background: var(--yellow);
+    color: #000;
+}
+.addrest a{
+    text-decoration: none;
+    font-size: 12px;
+    line-height: 20px;
+    color:var(--grey);
+}
+
+.addrest a:hover
+{
+    color: var(--yellow);
+}
 
 
 /*=======================*/
