--- a/views/new.ejs
+++ b/views/new.ejs
@@ -1,16 +1,14 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>Hole in Wall</title>
-    <!-- css stylesheet link -->
-    <link rel="stylesheet" type="text/css" href="/add.css">
-    <!-- google fonts link -->
-    <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC|Lato" rel="stylesheet">
-    <!-- viewport -->
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+<head>
+  <meta charset="utf-8">
+  <!-- viewport -->
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Hole in the Wall</title>
+  <!-- css stylesheet link -->
+  <link rel="stylesheet" type="text/css" href="/newedit.css">
+  <!-- google fonts link -->
+  <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC|Lato" rel="stylesheet">
 </head>
 
   <body>
@@ -18,7 +16,7 @@
     <div class="addrest">
     <!-- <img src="avatar.png" class="avatar"> -->
         <h1>Add Restaurant</h1>
-        <form>
+        <form action="/holeinwall" method="POST">
             <p>Name</p>
             <input type="text" name="name" placeholder="Enter restaurant name">
             <p>Image</p>
