--- a/views/show.ejs
+++ b/views/show.ejs
@@ -33,13 +33,13 @@
           <p class="p-text">
             <%=food.address%>
           </p>
-          <p class="p-text"><b>speciality:</b>
+          <p class="p-text"><b>Speciality:</b>
             <%=food.speciality%>
           </p>
-          <p class="p-text"><b>rating:</b>
+          <p class="p-text"><b>Rating:</b>
             <%=food.rating%>
           </p>
-          <p class="p-text"><b>reviews:</b>
+          <p class="p-text"><b>Review:</b>
             <%=food.reviews%>
           </p>
         </div>
